--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "file-type": "^16.0.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.10.11",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multiparty": "^4.2.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
